# simple_http

./: .gitignore  CMakeLists.txt  main.cpp
internal/: service.cpp  service.h
internal/parser/: parser.cpp  parser.h
internal/sender/: sender.cpp  sender.h
internal/spec/: spec.h
sender/: sender.cpp  sender.h
spec/: spec.h
